--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ dotenv = "0.15"
 urlencoding = "2.1"
 async-trait = "0.1.88"
 clap = { version = "4.5", features = ["derive"] }
+futures-util = "0.3.31"
+actix-web-lab = "0.24.2"
+tokio-stream = "0.1.17"
+
 
 
 [lib]
