--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ thiserror = "1.0"
 anyhow = "1.0"
 base64 = "0.21"
 dotenv = "0.15"
+scraper = "0.17"
 urlencoding = "2.1"
 async-trait = "0.1.88"
 clap = { version = "4.5", features = ["derive"] }
