--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ actix-web-lab = "0.24.2"
 tokio-stream = "0.1.17"
 bytes = "1.0" 
 regex = "1.0"
+lazy_static = "1.4"  # Add this line
 
 [lib]
 name = "snm_brightdata_client"
