--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tokio-stream = "0.1.17"
 bytes = "1.0" 
 regex = "1.0"
 lazy_static = "1.4"  # Add this line
+once_cell = "1.21.3"
 
 [lib]
 name = "snm_brightdata_client"
