--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "snm-brightdata-client"
-version = "0.3.3"
+version = "0.3.4"
 edition = "2021"
 description = "Bright Data Wrapper Client Highly compacted Data implemented in Rust with Actix Web"
-authors = ["Inx Maurya <you@example.com>"]
+authors = ["Snm Maurya <sxmmaurya@gmail.com.com>"]
 license = "MIT"
 repository = "https://github.com/snmmaurya/snm-brightdata-client"
 readme = "README.md"
@@ -40,6 +40,7 @@ regex = "1.0"
 lazy_static = "1.4"  # Add this line
 once_cell = "1.21.3"
 redis = { version = "0.32.0", features = ["tokio-native-tls-comp"] }
+url = "2.5.4"
 
 [lib]
 name = "snm_brightdata_client"
